istio/traffic/greeter-virtualservice-all-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: greeter-service
spec:
    hosts:
        - greeter-service
    http:
        - route:
              - destination:
                    host: greeter-service
                    port:
                        number: 3000
                    subset: v1
                weight: 0
              - destination:
                    host: greeter-service
                    port:
                        number: 3000
                    subset: v2
                weight: 100
