istio/traffic/greeter-virtualservice-v2-firefox.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: greeter-service
spec:
    hosts:
        - greeter-service
    http:
        - match:
              - headers:
                    user-agent:
                        regex: '.*Firefox.*'
          route:
              - destination:
                    host: greeter-service
                    port:
                        number: 3000
                    subset: v2
        - route:
              - destination:
                    host: greeter-service
                    port:
                        number: 3000
                    subset: v1
